--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
         <h1>Traductor de Números a Letras</h1>
         <label for="numero">Ingrese un número:</label>
         <input type="number" id="numero" placeholder="Por ejemplo, 123" />
-        <button onclick="convertirNumero()">Convertir</button>
+        <button onclick="convertirNumero()">Convertir a Español</button>
+        <button onclick="convertirNumeroIngles()">Convertir a Inglés</button>
         <div id="resultado" class="result"></div>
     </div>
 
@@ -137,6 +138,51 @@
             return convertir(numero);
         }
 
+        function numeroToWordsInEnglish(number) {
+            const ones = ['Zero', 'One', 'Two', 'Three', 'Four', 'Five', 'Six', 'Seven', 'Eight', 'Nine'];
+            const teens = ['Eleven', 'Twelve', 'Thirteen', 'Fourteen', 'Fifteen', 'Sixteen', 'Seventeen', 'Eighteen', 'Nineteen'];
+            const tens = ['Ten', 'Twenty', 'Thirty', 'Forty', 'Fifty', 'Sixty', 'Seventy', 'Eighty', 'Ninety'];
+            const thousands = ['', 'Thousand', 'Million', 'Billion'];
+
+            function convertLessThanThousand(num) {
+                let result = '';
+                if (num >= 100) {
+                    result += ones[Math.floor(num / 100)] + ' Hundred ';
+                    num %= 100;
+                }
+                if (num >= 20) {
+                    result += tens[Math.floor(num / 10) - 1] + ' ';
+                    num %= 10;
+                }
+                if (num >= 11) {
+                    result += teens[num - 11] + ' ';
+                } else if (num === 10) {
+                    result += tens[0] + ' ';
+                } else if (num > 0) {
+                    result += ones[num] + ' ';
+                }
+                return result.trim();
+            }
+
+            function convertNumber(num) {
+                if (num === 0) return 'Zero';
+
+                let result = '';
+                let i = 0;
+                while (num > 0) {
+                    let chunk = num % 1000;
+                    if (chunk > 0) {
+                        result = convertLessThanThousand(chunk) + ' ' + thousands[i] + ' ' + result;
+                    }
+                    num = Math.floor(num / 1000);
+                    i++;
+                }
+                return result.trim();
+            }
+
+            return convertNumber(number);
+        }
+
         function convertirNumero() {
             const numeroInput = document.getElementById('numero').value;
             const numero = parseInt(numeroInput);
@@ -158,6 +204,29 @@
 
             const resultado = numeroALetras(numero);
             document.getElementById('resultado').innerText = `El número ${numero} en letras es: ${resultado}`;
+        }
+
+        function convertirNumeroIngles() {
+            const numeroInput = document.getElementById('numero').value;
+            const numero = parseInt(numeroInput);
+
+            if (isNaN(numero)) {
+                document.getElementById('resultado').innerText = "Please enter a valid number.";
+                return;
+            }
+
+            if (numero < 0) {
+                document.getElementById('resultado').innerText = "Please enter a positive number.";
+                return;
+            }
+
+            if (numero > 999999999) {
+                document.getElementById('resultado').innerText = "The number is too large. Enter a number less than or equal to 999,999,999.";
+                return;
+            }
+
+            const resultado = numeroToWordsInEnglish(numero);
+            document.getElementById('resultado').innerText = `The number ${numero} in English is: ${resultado}`;
         }
     </script>
 </body>
